--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
 		<title>Delicious Burgers to Devour!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/assets/js/burg.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
 	</body>
+	<script
 </html>
