--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
                 <div class="col-md-6">
                   <form class="form-group eat-button" action="burgers/update/{{this.id}}?_method=PUT" method="POST">
                       <input class="form-control" type="hidden" name="burger_name" value="true">
-                      <button type="submit">EAT ME.</button>
+                      <button type="submit">EAT ME!!!</button>
                   </form>
                 </div>
               </div>
